# politicallyInformed

./: .gitignore  Procfile  manage.py  pyproject.toml
authentication/: forms.py  views.py
authentication/templates/authentication/: index.html
electoral_map/: admin.py  apps.py  models.py  views.py
politically_informed/: asgi.py  settings.py  urls.py  wsgi.py
quiz/: forms.py  models.py  views.py
templates/: electoral_map.html
voters/: admin.py  forms.py  models.py  views.py
voters/migrations/: 0002_auto_20201104_1837.py
