[tool.poetry]
name = "politicallyinformed"
version = "0.1.0"
description = ""
authors = ["Jordan Haagenson <jdhaagenson@gmail.com>, Mauricio Alvarado <mauriciomj11@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.5"
django = "^3.1.2"
django-allauth = "^0.43.0"
djangorestframework = "^3.12.1"
environ = "^1.0"
djecrety = "^1.0.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
